# zeroclaw-reachy-companion

./: .env.example  .gitignore  README.md  prompt.md  prompt_0427_02.md  pyproject.toml  todolist.md
scenarios/: reachy_phase12.yaml
scripts/: run_phase12_scenarios.py
src/zeroclaw_reachy_companion/: __init__.py  app.py  config.py  service.py
src/zeroclaw_reachy_companion/audio/: __init__.py  audio_io.py  speech_loop.py  stt.py  tts.py  vad.py
src/zeroclaw_reachy_companion/profiles/: baby_companion.yaml
src/zeroclaw_reachy_companion/providers/: __init__.py  local_llm.py  zeroclaw_client.py
src/zeroclaw_reachy_companion/reachy/: __init__.py  client.py  emotion.py  motion.py  speech_output.py
src/zeroclaw_reachy_companion/runtime/: __init__.py  event_router.py  events.py  state.py  text_chat_loop.py  voice_chat_loop.py
src/zeroclaw_reachy_companion/tools/: __init__.py  base.py  dance.py  do_nothing.py  move_head.py  play_emotion.py  soothe_baby.py  speak.py  stop_dance.py  stop_emotion.py  stop_motion.py  story_time.py
tests/: helpers.py  test_continuous_listening.py  test_lm_studio_integration.py  test_lm_studio_sim_integration.py  test_lm_studio_sim_restraint_behavior.py  test_lm_studio_sim_semantic_behavior.py  test_mock_event_router.py  test_phase12_scenarios.py  test_prompt_profile.py  test_reachy_service.py  test_sim_effects.py  test_tool_inventory.py  test_tools_smoke.py  test_zeroclaw_client.py
